--- a/src/less/header.less
+++ b/src/less/header.less
@@ -2,10 +2,11 @@
 
 header {
   position: relative;
-  @media (min-width: 992px) {
-    height: 735px;
-    background: url(../img/banner_bg.png) center center no-repeat;
+  background: url(../img/banner_bg.png) center center no-repeat;
     background-size: cover;
+    z-index: 2;
+  @media (min-width: 992px) {
+    height: 735px;    
   }
   .logo {
     margin-top: 30px;
@@ -21,10 +22,41 @@ header {
 
 .banner__content {
   color: #fff;
+  height: 180px;
+  .banner__title {
+    font-size: 20px;
+    text-transform: uppercase;
+    line-height: 1.1;
+    margin-bottom: 20px;
+  }
   @media (min-width: 992px) {
     height: 440px;
+    display: flex;
+      flex-direction: column;
+      justify-content: center;
     .banner__title {
-      font-size: 60px;
+      padding-top: 40px;
+      padding-left: 110px;
+      font-size: 40px;
+      text-transform: uppercase;
+      line-height: 1.1;
+      position: relative;
+      margin-bottom: 20px;
+      &:after {
+        content: '';
+        display: block;
+        width: 255px;
+        height: 255px;
+        border-radius: 4px;
+        background: @color url(../img/banner-img.png) 0 185px no-repeat;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: -1;
+      }
+    }
+    .banner__description {
+      padding-left: 295px;
     }
   }
 }
@@ -54,5 +86,9 @@ header {
   &.btn__iconed {
     padding-left: 55px;
     background: url(../img/download.png) 15px 15px no-repeat;
+  }
+  &.btn-small {
+    padding: 7px 25px;
+    display: inline-block;
   }
 }
