--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,6 +4,7 @@
     border-radius: 5px;
     position: relative;
     padding: 40px 70px;
+    z-index: 3;
     @media (min-width: 992px) {
         top: -150px;
         margin-bottom: -110px;
@@ -11,7 +12,9 @@
     background: @color;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     .advantages__item {
+        margin-bottom: 20px;
         .ai__img {
             position: relative;
             width: 160px;
@@ -59,5 +62,236 @@
         background: #f6f6f6;
         padding: 25px 35px;
         border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .hcs__img {
+            height: 140px;
+        }
+        .hcs__title {
+            font-size: 18px;
+            text-transform: uppercase;
+            font-weight: 300;
+            text-align: center;
+        }
+    }
+}
+.form-item {
+    margin-bottom: 20px;
+    position: relative;
+    label {
+        position: absolute;
+        font-size: 16px;
+        font-weight: 300;
+        bottom: 9px;
+        left: 25px;
+        cursor: text;
+        transition: .4s;
+        text-transform: uppercase;
+    }
+    input {
+        width: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        padding: 12px 25px;
+        border: 1px solid @color;
+        font-size: 16px;
+        transition: .4s;
+        border-radius: 3px;
+        &:focus {
+            ~ label {
+                font-size: 14px;
+                bottom: 45px;
+                left: 0;
+            }
+            border-bottom-color: @color;
+        }
+        &.not-empty {
+            ~ label {
+                font-size: 14px;
+                bottom: 45px;
+                left: 0;
+            } 
+        }
+    }
+}
+.form-actions {
+    input {
+        cursor: pointer;
+        background: @color;
+        border: none;
+        outline: none;
+        text-transform: uppercase;
+        color: #fff;
+        font-weight: 300;
+        padding: 12px 30px;
+        transition: .3s;
+        &:hover {
+            background: darken(@color, 10%);
+        }
+    }
+}
+
+.sf__item {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    background: #f6f6f6;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    .sfi__right-col {
+        .right-col__label {
+            padding-left: 15px;
+            border-left: 2px solid @color;
+            font-size: 14px;
+            margin-bottom: 10px;
+        }
+        .right-col__price {
+            margin-bottom: 20px;
+            padding-left: 15px;
+            span {
+                font-size: 24px;
+                &:first-child {                    
+                    letter-spacing: -2px;
+                    color: @color;
+                }
+                &:last-child {
+                    color: #a8a8a8;
+                }
+            }
+        }
+    }
+}
+
+.help__sphere {
+    .hs__item {
+      padding: 20px;
+      border-bottom: 5px solid #dedede;
+      transition: all .3s;
+      &:hover {
+          border-bottom-color: @color
+      }
+      .hsi__img {
+         margin-bottom: 30px; 
+      }  
+      .hsi__label {
+          padding-left: 4px;
+          height: 45px;
+          margin-bottom: 20px;
+          font-size: 18px;
+      }
+    }
+}
+
+.swiper-container {
+    padding-bottom: 30px;
+}
+
+.swiper-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.swiper-scrollbar {
+    background: fade(#fff, 20%);
+}
+.swiper-scrollbar-drag {
+    background: fade(#fff, 90%);
+}
+
+.partners {
+    .wide-container {
+        border-radius: 4px;
+        background: #2d2a31;
+        padding: 60px 0;
+    }
+}
+
+.get__offer {
+    background: url(../img/offer-bg.png) left center no-repeat;
+    background-size: contain;
+    form {
+        margin: 20px 0;
+        @media (min-width: 768px) {
+            margin: 60px 0;
+        } 
+        @media (min-width: 992px) {
+            margin: 100px 0;
+        }        
+        .form__title {
+            font-size: 28px;
+            @media (min-width: 992px) {
+                font-size: 60px;
+            }
+            font-weight: 300;
+            line-height: 1;
+            text-transform: uppercase;
+            margin-bottom: 40px;
+        }
+        .form-item {
+            input {
+                background: #fff;
+            }
+        }
+        .form-actions {
+            margin-top: 40px;
+        }
+    }
+}
+
+.services {
+    padding: 60px 0;
+    border-bottom: 1px solid fade(#fff, 40%);
+    .s__item {
+        margin-bottom: 30px;
+        .si__img {
+            width: 160px;
+            height: 160px;
+            background: darken(#2d2a31, 5%);
+            margin: 0 auto;
+            position: relative;
+            border-radius: 50%;
+            margin-bottom: 25px;
+            img {
+                position: absolute;
+                top: 0;right: 0;bottom: 0;left: 0;margin: auto;
+            }
+            &:after {
+                content: '';
+                display: block;
+                width: 125px;
+                height: 125px;
+                border-radius: 50%;
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+                border-bottom: 2px solid #fff;
+            }
+        }
+        .si__label {
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 14px;
+            font-weight: 300;
+        }
+    }
+}
+
+footer {
+    background: #2d2a31;
+    color: #fff;
+    padding: 30px 0;
+    .copyright {
+        margin-bottom: 30px;
+    }
+    .info {
+        line-height: 1.3;
+        font-size: 14px;
+        font-weight: 300;
     }
 }
